This CSS fix adds a scrollbar to the modal if content height is greater than resolution

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -243,3 +243,8 @@ color: #ffffff;
             max-width: 73% !important;
         }
     }
+
+.modal-body {
+	max-height: calc(100vh - 200px);
+	overflow-y: auto;
+}
